<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pandabearsinc.sommer.depolarizedpanda_11383.MoodActivity">

    <TextView
        android:text="@string/medication_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moodListView">
    </ListView>

    <Button
        android:id="@+id/savemood_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:textSize="25sp"
        android:background="@drawable/btn_layout"
        android:onClick="saveMood"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/cancelmood_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_btn"
        android:background="@drawable/btn_layout"
        android:textSize="25sp"
        android:onClick="cancelmood"
        android:layout_marginBottom="10dp"/>



</LinearLayout>
