<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pandabearsinc.sommer.depolarizedpanda_11383.MedicationActivity">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newMedication"
        android:textSize="25sp"
        android:onClick="addNewMedication"
        android:layout_marginBottom="10sp"
        />

    <TextView
        android:text="@string/medication_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:gravity="center"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:gravity="center"
        android:clickable="true" />

    <Button
        android:id="@+id/cancelMedication_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn"
        android:textSize="25sp"
        android:onClick="cancelMedication"
        android:layout_marginBottom="10sp"/>
</LinearLayout>
