<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <TextView android:text="Date"
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:textSize="25sp"
        android:layout_height="wrap_content"/>
    <EditText android:text=""
        android:id="@+id/txtDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:onClick="showDatePickerDialog"

        />
    <DatePicker
        android:id="@+id/pickerdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="true"
        android:spinnersShown="false"
        android:visibility="gone"/>
    <Spinner
        android:id="@+id/moodspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        />

    <Button
        android:id="@+id/medication_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medication_btn"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        android:onClick="startMedicationActivity"/>
    <Button
        android:id="@+id/note_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_btn"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        android:onClick="startNoteActivity"
        />
    <Button
        android:id="@+id/history_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_btn"
        android:textSize="25sp"
        android:layout_marginBottom="10sp"
        android:onClick="startHistoryActivity"
        />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savetodatabase_btn"
        android:textSize="25sp"
        android:onClick="SaveToDatabase"
        />



</LinearLayout>
