<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pandabearsinc.sommer.depolarizedpanda_11383.ChooseHistoryActivity">

    <TextView
        android:text="@string/startdate"
        android:id="@+id/HistoryTextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/HistoryStartdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:onClick="DatePickerStartDate"
        />

    <TextView
        android:text="@string/enddate"
        android:id="@+id/HistoryTextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/HistoryEnddate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:onClick="DatePickerEndDate"
        />
    <DatePicker
        android:id="@+id/historyDatePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="true"
        android:maxDate="MaxDate"
        android:spinnersShown="false"
        android:visibility="gone"/>

    <DatePicker
        android:id="@+id/historyDatePicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minDate="MinDate"
        android:calendarViewShown="true"
        android:spinnersShown="false"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showhistory"
        android:onClick="showHistory"/>

</LinearLayout>
